tests/valid/import/global_variable.rs
/*
executionExitCode: 42
*/

magic_number @ std::test::import::valid;

main(): i32 {
    return magic_number;
}
