tests/invalid/import/nonexistent_program_item.rs
/*
compilationExitCode: 2
*/

i_do_not_exist @ std::test::import::valid;

main(): i32 {
    return 2;
}
